--- a/imagen.css
+++ b/imagen.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   min-height: 100vh;
   font-family: 'Segoe UI', sans-serif;
-  background-image: url('liah.jpeg'); /* Cambia por el nombre de tu imagen */
+  background-image: url('LIAH.jpeg'); /* Cambia por el nombre de tu imagen */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -56,3 +56,4 @@ button:hover {
   margin: 10px;
   border-radius: 10px;
   border: 2px solid #fff;
+
